# mdfix

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  conv_md.pyw  mdfix.pyw  mdfix_ref.pyw  pyproject.toml  pyrightconfig.json
.gemini/: settings.json
docs/: conf.py  index.rst
docs/mdfix/: mdfix.normalizers.bullets.rst  mdfix.normalizers.headers.rst  mdfix.normalizers.latex.rst  mdfix.normalizers.misc.rst  mdfix.normalizers.refs.rst  mdfix.normalizers.rst  mdfix.normalizers.spaces.rst  mdfix.rst  mdfix.runner.rst  modules.rst
docs/plans/: feat_plan.md
mdfix/: normalizer.py  runner.py
mdfix/bullets/: __init__.py
mdfix/headers/: __init__.py  header_emphasis_remover.py
mdfix/latex/: latex_bracket_normalizer.py
mdfix/normalizers/: normalizer.py
mdfix/refs/: reference_line_remover.py  reference_marker_normalizer.py
mdfix/runner/: __init__.py  runner.py
mdfix/spaces/: __init__.py  empty_blockquote_remover.py  multiple_newlines_remover.py
pyscript/: conv_md.pyw
pyscript/conv_md/: runner.py  trans.py
scripts/: doc-build.bat  doc-build.sh  git_branch_del.bat  git_branch_new.bat  git_merge.bat  pytest-cov.sh  sync_file.py
tests/: test_conv_md.py  test_conv_md_trans.py  test_runner.py  test_trans.py
tests/assets/: test.md
tests/bullets/: test_bullet_indent_normalizer.py  test_bullet_line_break_adder.py  test_bullet_string_normalizer.py
tests/conv_md/: test_conv_md_runner.py  test_conv_md_trans.py
tests/headers/: test_header_emphasis_remover.py  test_header_level_normalizer.py  test_header_line_break_adder.py  test_header_number_marker_converter.py
(+57 files in other folders)
