[project]
name = "mdfix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "sphinx>=8.2.3",
    "sphinx-markdown-builder>=0.6.9",
]

[tool.black]
line-length = 125
